<resources>
    <string name="app_name">FlashCardMemory</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="exemple_mail_com">exemple@mail.com</string>
    <string name="password">Password</string>
    <string name="sing_up_title">Sign up !</string>
    <string name="already_have_an_account_sign_in">Already have an account ? Sign in !</string>
    <string name="sign_inbt">Sign in</string>
    <string name="sign_in">Sign In</string>
    <string name="you_don_t_have_an_account_yet_sing_up">You don\'t have an account yet ? Sing up</string>
    <string name="please_fill">Please fill in all the required fields</string>
    <string name="ok">ok</string>
    <string name="fail_connexion">connexion fail</string>
    <string name="please_check">Please check if you\'re connected</string>
    <string name="error_mail">Error on you mail</string>
    <string name="warning">Warning</string>
    <string name="no_account">It\'s seems you doesn\'t have an account anymore</string>
    <string name="TitleSet">Ttitle</string>
    <string name="general">General</string>
    <string name="code">Code</string>
    <string name="write_the_question_here">Write the question here</string>
    <string name="write_the_answer_here">Write the answer here</string>
    <string name="create_flashcard">Create Flashcard</string>
    <string name="flcreated">FlashCardCreated</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="alreadyLearned">Already set Learned</string>
</resources>
